# qramm-qbom

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ADAPTERS.md  API.md  CLI.md  INSTALLATION.md  USAGE.md  USE-CASES.md  WHY-QBOM.md
docs/plans/: 2024-12-31-qbom-design.md
docs/proposals/: cyclonedx-qbom-extension.md
docs/specs/: qbom-spec-1.0.json
examples/: basic_usage.py  cirq_usage.py  pennylane_usage.py  scoped_experiment.py
src/qbom/: __init__.py
src/qbom/adapters/: __init__.py  base.py  cirq.py  pennylane.py  qiskit.py
src/qbom/analysis/: __init__.py  drift.py  score.py  validation.py
src/qbom/cli/: __init__.py  display.py  main.py
src/qbom/core/: __init__.py  models.py  session.py  trace.py
src/qbom/notebook/: __init__.py  display.py
tests/: __init__.py  test_models.py
